Bugfix - playerhand card alignment incorrect

--- a/src/App.css
+++ b/src/App.css
@@ -92,6 +92,7 @@ ul {
 .handlist {
   min-height: 300px;
   padding: 0;
+  align-items: center;
 }
 
 .playerhand {
